<resources>
    <string name="app_name">Just Kettepa</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="price">price</string>
    <string name="order">order</string>
    <string name="quantity">quantity</string>
    <string name="chocolate">Chocolate</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="toppings">toppings</string>
    <string name="name">Name</string>
</resources>
