<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editText"
        android:layout_width="392dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/name"
        android:padding="2dp"/>

    <TextView
        android:id="@+id/toppings_textview"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/toppings"
        android:textAlignment="center"
        android:textSize="26sp"
        android:padding="2dp"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:padding="2dp"
        android:text="@string/whipped_cream" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:padding="2dp"
        android:text="@string/chocolate" />

    <TextView
        android:id="@+id/quantity_titleview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/quantity"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decreament_btn"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/quantity_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />

        <Button
            android:id="@+id/increament_btn"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:text="@string/plus" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/price"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/amount_in_ksh_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="TextView" />

    <Button
        android:id="@+id/order-btn"
        android:layout_width="100dp"
        android:layout_height="71dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/order" />
</LinearLayout>